--- a/templates/index.html
+++ b/templates/index.html
@@ -55,12 +55,12 @@ h1{
     font-weight: bolder;
 }
 h3{
-  color:#2e8b57 ;
+  color:#382e8bdb ;
 }
 
 body {
             
-            background-image: url("static/img/car_price.jpeg");
+            background-image: url("static/img/CAR.jpeg");
             background-repeat: no-repeat;
             background-size: cover;
             text-align: center;
