--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@ h3{
 
 body {
             
-            background-image: url("static/img/CAR.jpeg");
+            background-image: url("static/img/car_pic2.jpeg");
             background-repeat: no-repeat;
             background-size: cover;
             text-align: center;
